--- a/food/platforms/android/assets/www/index.html
+++ b/food/platforms/android/assets/www/index.html
@@ -30,7 +30,10 @@
     <script src="js/ExternalServicesSql.js"></script>
  
     <script src="AddTemplates/locations.js"></script>
+    <script src="AddTemplates/newLoacation.js"></script>
+    
     <script src="AddTemplates/dishes.js"></script>
+    <script src="AddTemplates/newDish.js"></script>
     <script src="AddTemplates/photo.js"></script>
     <script src="AddTemplates/fileLoad.js"></script>
   
