--- a/food/www/Index.html
+++ b/food/www/Index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="mobile-angular-ui/css/mobile-angular-ui-desktop.min.css">
     <link href="css/lunch.css" rel="stylesheet" />
 
-    <!--<script src="cordova.js"></script>
-    <script src="cordova_plugins.js"></script>-->
+    <script src="cordova.js"></script>
+    <script src="cordova_plugins.js"></script>
 
 
 
@@ -33,7 +33,9 @@
     <script src="AddTemplates/newLoacation.js"></script>
     
     <script src="AddTemplates/dishes.js"></script>
-    <script src="AddTemplates/photo.js"></script>
+    <script src="AddTemplates/newDish.js"></script>
+    <script src="AddTemplates/addLB.js"></script>
+  <script src="AddTemplates/photo.js"></script>
     <script src="AddTemplates/fileLoad.js"></script>
   
     <!--    <script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>-->
