--- a/food/www/LBTemplates/LunchBox.html
+++ b/food/www/LBTemplates/LunchBox.html
@@ -1,7 +1,12 @@
-﻿<div class="panel panel-default">    
+﻿<div class="panel panel-default">
     <div class="list-group">
-        <a ng-repeat="plate in LBPlates" ng-click="selectLocal(plate)" class="list-group-item" href="" >{{plate.Name}}
-            <img ng-src="{{plate.imgLink}}" style="float:right" /> 
-        </a>
-     </div>
+        <div class="row">
+
+            <a ng-repeat="plate in LBPlates" ng-click="selectLocal(plate)" class="list-group-item" href="">
+                <div class="col-xs-7"> {{plate.Name}}</div>
+                <div class="col-xs-5"> <img ng-src="{{plate.imgLink}}" /></div>
+                <div class="clearfix visible-xs-block"></div>
+            </a>
+        </div>
+    </div>
 </div>
