--- a/food/platforms/android/assets/www/index.html
+++ b/food/platforms/android/assets/www/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<div id="fb-root"></div>  
+<div id="fb-root"></div>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,12 +22,12 @@
    
 
     <script src="LBTemplates/LBExternalSql.js"></script>
-    
     <script src="js/facebookConnectPlugin.js"></script>
+
     <script src="Main.js"></script>
     <script src="LBTemplates/loginServices.js"></script>
     <script src="LBTemplates/Login.js"></script>
-    <script src="LBTemplates/FBlogin.js"></script>
+    <script src="LBTemplates/FBLogin.js"></script>
     <script src="dishServices.js"></script>
  
     <script src="LBTemplates/LunchBox.js"></script>
@@ -51,7 +52,7 @@
 </head>
 
 <body ng-app="Main" ng-controller="mainCtrl">
-  
+ 
     <nav class="navbar navbar-default" role="navigation">
         <ul class="nav nav-tabs">
             <li ng-class="tabClass(tab)" ng-repeat="tab in tabs">
