--- a/food/www/Index.html
+++ b/food/www/Index.html
@@ -27,7 +27,7 @@
     <script src="Main.js"></script>
     <script src="LBTemplates/loginServices.js"></script>
     <script src="LBTemplates/Login.js"></script>
-    <script src="LBTemplates/FBlogin.js"></script>
+    <script src="LBTemplates/FBLogin.js"></script>
     <script src="dishServices.js"></script>
  
     <script src="LBTemplates/LunchBox.js"></script>
