--- a/food/platforms/android/assets/www/index.html
+++ b/food/platforms/android/assets/www/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="mobile-angular-ui/css/mobile-angular-ui-desktop.min.css">
     <link href="css/lunch.css" rel="stylesheet" />
 
+    <script src="appconfig.js"></script>
     <script src="cordova.js"></script>
     <script src="cordova_plugins.js"></script>
 
