--- a/FoodUi/index.html
+++ b/FoodUi/index.html
@@ -23,14 +23,15 @@
    
 
     <script src="LBTemplates/LBExternalSql.js"></script>
-    <script src="js/facebookConnectPlugin.js"></script>
+    <script src="facebookConnectPlugin.js"></script>
 
     <script src="Main.js"></script>
     <script src="LBTemplates/loginServices.js"></script>
     <script src="LBTemplates/Login.js"></script>
     <script src="LBTemplates/FBLogin.js"></script>
     <script src="dishServices.js"></script>
- 
+    <script src="LBTemplates/Search.js"></script>
+
     <script src="LBTemplates/LunchBox.js"></script>
   
 
