--- a/FoodUi/LBTemplates/Search.html
+++ b/FoodUi/LBTemplates/Search.html
@@ -11,7 +11,7 @@
     <div class="list-group">
         <div class="row">
 
-            <a ng-repeat="plate in Dishes" ng-click="selectLocal(plate)" class="list-group-item" href="">
+            <a ng-repeat="plate in Dishes" ng-click="selectPlate(plate)" class="list-group-item " href="">
                 <div class="col-xs-7"> {{plate.Name}}</div>
                 <div class="col-xs-5"> <img ng-src="{{plate.imgLink}}" /></div>
                 <div class="clearfix visible-xs-block"></div>
