--- a/FoodUi/index.html
+++ b/FoodUi/index.html
@@ -32,10 +32,7 @@
     <div id="fb-root"></div>
     <!-- cordova -->
     <script src="cordova.js"></script>
-    <!-- cordova facebook plugin -->
-    <script src="cdv-plugin-fb-connect.js"></script>
-    <!-- facebook js sdk -->
-    <script src="facebook-js-sdk.js"></script>
+    <script src="facebookConnectPlugin.js"></script>
 
     <script src="appconfig.js"></script>
 
