--- a/food/platforms/android/assets/www/LBTemplates/FBLogin.html
+++ b/food/platforms/android/assets/www/LBTemplates/FBLogin.html
@@ -1,7 +1,10 @@
 ﻿<div class="panel panel-default">     
-    <button type="button" class="btn btn-primary btn-lg btn-block " ng-click="fbLogin()">
+    <button type="button" class="btn btn-primary btn-lg btn-block " ng-disabled="proccessing" ng-click="fbLogin()">
         Login  <span class="fa fa-facebook-square"></span>
     </button>
 
         
+</div>
+<div class="well well-sm small-margin-bottom " ng-show="proccessing" style="text-align:center">
+    <span class="fa fa-spinner fa-spin"></span>
 </div>
